react table added

--- a/src/components/OurMemberSays/Testies.css
+++ b/src/components/OurMemberSays/Testies.css
@@ -23,7 +23,7 @@
   }
   
   .swiper-slide:nth-child(3n) {
-    background-color: #3a9691;
+    background-color: #6366f1;
   }
   
   .swiper-slide:nth-child(4n) {
