--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
+
 /* font-family: 'Dancing Script', cursive; */
-body{
+body {
   font-family: 'Cabin', sans-serif;
+}
+
+.errPage {
+  background-color: #E4F0F1;
+  background-position: center;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.errBg {
+  background-image: url(./assets/error.gif);
+  height: 100%;
+  width: 100%;
 }
